[package]
name = "factori-imp"
version = "0.9.3"
description = "factori-imp(roved), a factory library for Rust, inspired by FactoryBot. 🤖"
license = "MIT"
authors = ["Hugo Almeida <hugofalmeida@gmail.com>", "Michael Killough <michaeljkillough@gmail.com>"]
repository = "https://github.com/GriffinHeart/factori-imp"
keywords = ["factory", "testing", "test", "fixture"]
categories = ["development-tools::testing"]
readme = "README.md"
edition = "2018"

[dependencies]
factori-imp-impl = { version = "0.9.3", path = "./factori-imp-impl" }
