[package]
name = "factori-imp-impl"
version = "0.9.3"
description = "You shouldn't use this crate directly. It's internal to factori-imp."
license = "MIT"
repository = "https://github.com/GriffinHeart/factori-imp"
keywords = ["factory", "testing", "test", "fixture"]
categories = ["development-tools::testing"]
authors = ["Hugo Almeida <hugofalmeida@gmail.com>", "Michael Killough <michaeljkillough@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
